client/css: fix dark mode pagination header bg

--- a/client/css/pager.styl
+++ b/client/css/pager.styl
@@ -22,7 +22,7 @@
                 z-index: 1
             span
                 position: relative
-                background: white
+                background: $window-color
                 padding: 0 1em
                 z-index: 2
 
@@ -31,3 +31,5 @@
         .page-header
             &:before
                 background: $top-navigation-color-darktheme
+            span
+                background: $window-color-darktheme
